--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/nuxt": "^11.0.3",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
